samples/_failures_safe/1761188156_229896_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3417bd06.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_3417bd06.c:182:22: error: expected ‘;’ at end of input
  182 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_3417bd06.c:182:5: error: expected declaration or statement at end of input
  182 |     for (int i = 0; i
      |     ^~~
